# vedi

./: .dockerignore  .gitignore  README-Windows.md  README.md  docker-compose.windows.yml  docker-compose.yml  docker-run.bat  docker-run.ps1  pyproject.toml  run.sh
.github/workflows/: backend-tests.yml  ci.yml  frontend-tests.yml
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.windows  README.md  pyproject.toml
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  advanced_routes.py  prediction_routes.py  routes.py
backend/src/core/: __init__.py  ashtakavarga.py  dasha.py  divisional.py  ephemeris.py  nakshatra.py  panchanga.py  predictions.py  rashi.py  shadbala.py  yogas.py
backend/src/models/: __init__.py  advanced_schemas.py  schemas.py
backend/src/services/: __init__.py  advanced_service.py  chart_service.py  prediction_service.py
backend/tests/: test_dasha.py  test_nakshatra.py  test_rashi.py
frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.windows  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/Chart/: NorthIndianChart.tsx  PlanetTable.tsx  SouthIndianChart.tsx
frontend/src/components/Dasha/: CurrentDasha.tsx  CurrentPrediction.tsx  DashaPrediction.tsx  DashaTimeline.tsx  NakshatraInfo.tsx
frontend/src/components/Forms/: BirthDataForm.tsx
frontend/src/hooks/: useChart.ts
frontend/src/services/: api.test.ts  api.ts
frontend/src/test/: setup.ts
frontend/src/types/: astrology.test.ts  astrology.ts
frontend/src/utils/: dateUtils.test.ts  dateUtils.ts
